# LitterBox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  litterbox.py  release-notes.md  requirements.txt
Config/: config.yaml
Config/edr_profiles/: elastic.yml.example  fibratus.yml.example
Docker/: README.md  docker-compose.yml  install.ps1  setup.sh
GrumpyCats/: LitterBoxMCP.py  README.md  grumpycat.py  install_mcp.py
GrumpyCats/cli/: __init__.py  handlers.py  parser.py  runner.py
GrumpyCats/litterbox_client/: __init__.py  analysis.py  base.py  client.py  doppelganger.py  edr.py  exceptions.py  files.py  reports.py  results.py  system.py
Scanners/Yara/: LitterBox.yar
Whiskers/: BUILD.md  Cargo.toml  README.md
Whiskers/src/: agent_log.rs  file_writer.rs  main.rs  state.rs
Whiskers/src/api/: alerts.rs  execute.rs  info.rs  lock.rs  logs.rs  mod.rs
app/: __init__.py  helpers.py  routes.py  utils.py
app/analyzers/: base.py  blender.py  holygrail.py  manager.py
app/analyzers/dynamic/: hollows_hunter_analyzer.py  hsb_analyzer.py  moneta_analyzer.py  patriot_analyzer.py  pe_sieve_analyzer.py  rededr_analyzer.py  yara_analyzer.py
app/analyzers/edr/: __init__.py  agent_client.py  elastic_client.py  elastic_edr_analyzer.py  (+3 more)
app/blueprints/: __init__.py  analysis.py  api.py  doppelganger.py  management.py  results.py  upload.py
app/services/: edr_health.py  error_handling.py  rendering.py  summary.py  summary_cache.py  tool_check.py
app/templates/: agents.html  analyze_all.html  base.html  byovd_info.html  dashboard.html  doppelganger.html  dynamic_info.html  edr_info.html  error.html  file_info.html  holygrail.html  report.html  results.html  static_info.html  summary.html  upload.html
app/utils/: __init__.py  file_io.py  forensics.py  htmlsmuggle.py  json_helpers.py  lnk.py  office.py  path_manager.py  reporting.py  risk_analyzer.py  validators.py
(+49 files in other folders)
